# SnakeXP

./: .gitignore  CMakeLists.txt  README.md
src/: gameObjects.cpp  gameObjects.h  gameSetup.cpp  gameSetup.h  gameStates.h  gamesetup.cpp  gamesetup.h  main.cpp  scaling.cpp  scaling.h  snakeXP.cpp  snakeXP.h  snakexp.cpp  snakexp.h
src/gameObjects/: food.cpp  food.h  map.cpp  map.h  snake.cpp  snake.h  textureGrid.cpp  textureGrid.h
